#1 - Correções em dependências, correções em converter. validadores